# simple-asr

./: README.md  main.py  pyproject.toml  vocab.toml
nv_one_logger/: __init__.py
simple_asr/: __init__.py  app.py  audio.py  config.py  gui.py  hotkeys.py  vocabulary.py
simple_asr/providers/: __init__.py  base.py  canary.py
